[package]
name = "rust-panel"
version = "0.0.1"
edition = "2021"
authors = ["Wynters <wyn.devs@gmail.com>"]
license = "apache-2.0"
include = [
    "**/*",
]

#[lib] 
#proc-macro = true

[[bin]]
name = "panel"
path = "src/bin/panel.rs"


[[bin]]
name = "rp"
path = "src/bin/rp.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version="0.31",features = ["bundled"] }
chrono = { version = "0", features = ["serde"] }
actix-session =  { version = "0", features = ["cookie-session"] }
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
ureq = { version = "2", features = ["json", "charset"] }
sysinfo="0"
os_info = { version = "3"}
sys-info = "0.9"
jsonwebtoken = "9.3.0"
r2d2 = "0.8"
actix-web = "4"
log4rs = "1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
actix-files = "0.6"
port_check = "0.2"
get_if_addrs = "0.5"
lazy_static = "1.4.0"
rand = "0.8.5"
derive_more = "0.99.17"
actix-service = "2.0.2"
#rust-argon2 = "2.1"
rust-crypto = "0.2"
rust-i18n = "3"
base64 = "0.22"
encoding_rs = "0.8.34"
gmsm = "0.1"